# gridfs-gui

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  build.sh  docker-compose.prod.yml  docker-compose.yml  render.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs-claude/: 03_03_2026_v1.md  backend-routes.md  document-preview.plan.md  folder-ui-redesign.plan.md  plan.md  webui-templates-index.md
gui/: .dockerignore  Dockerfile  components.json  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
gui/src/: App.tsx  index.css  index.html  main.tsx  routes.ts
gui/src/common/: constants.ts  types.ts
gui/src/common/utils/: content-type.ts  format-date.ts  format-file-size.ts
gui/src/components/buckets/: BucketSidebar.tsx
gui/src/contexts/: ActiveConnectionContext.ts  ActiveConnectionProvider.tsx
gui/src/hooks/: useBrowseNavigation.ts  useBuckets.ts  useConnections.ts  useDatabases.ts  useFiles.ts  useSortPreference.ts
gui/src/types/: bucket.ts  connection.ts  file.ts
product-docs/: GRIDFS_GUI_PROJECT_PLAN.md
server/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
server/app/: config.py  main.py
server/app/api/: buckets.py  connections.py  deps.py  files.py  routes.py
server/app/models/: bucket.py  connection.py  file.py
server/app/services/: connection_pool.py  connection_store.py  content_type.py  document_converter.py  encryption.py  gridfs_service.py  preview_cache.py
(+57 files in other folders)
